--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<a href="https://www.youtube.com/watch?v=7yk6kS3QY0g"></a>
+	<a href="https://www.youtube.com/watch?v=7yk6kS3QY0g">favourite song</a>
     <script type="text/javascript" src="./script.js">
 </script>
 
